<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news"
            android:icon="@drawable/nav_news"
            android:title="@string/news" />
        <item
            android:id="@+id/photos"
            android:icon="@drawable/nav_photos"
            android:title="@string/photos" />

    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/theme"
                android:icon="@drawable/nav_theme"
                android:title="@string/theme" />
            <item
            android:id="@+id/application"
            android:icon="@drawable/nav_application"
            android:title="@string/recommend" />
            <item
                android:id="@+id/setting"
                android:icon="@drawable/nav_setting"
                android:title="@string/setting" />
        </menu>
    </item>



</menu>
